cmake_minimum_required(VERSION 3.2)
project(Group2)

set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++17")

set(SOURCE_FILES TLTQ/src/main.cpp)
add_executable(Group2 ${SOURCE_FILES})
include_directories(/usr/local/include)

find_package(SFML 2.5.1 COMPONENTS system window graphics network audio REQUIRED)
include_directories(${SFML_INCLUDE_DIRS})
target_link_libraries(Group2 sfml-system sfml-window sfml-graphics sfml-audio sfml-network)